--- a/tesi.tex
+++ b/tesi.tex
@@ -16,6 +16,8 @@
 \usepackage{amsthm}
 \usepackage{hyperref}
 \usepackage{natbib}
+\usepackage{listings}
+\usepackage{tcolorbox}
 
 
 %%%%%%%%
@@ -124,7 +126,7 @@ The surface taken into consideration includes both member states of the European
 In this vast area we found various types of habitats, with a very high rate of biodiversity that makes this surface a natural laboratory for studying the various species and their distribution.
 
 \subsection{Data and filters}
-The data taken into consideration were extracted from the databases of the Global Biodiversity Information Facility (GBIF) (available free of charge at https://www.gbif.org/) between 18 October 2021 and 10 December 2021.
+The data taken into consideration were extracted from the databases of the Global Biodiversity Information Facility (GBIF) \citep{gbif} between 18 October 2021 and 10 December 2021.
 This data has been carefully filtered, eliminating many parameters taken into account in the initial database.
 First of all, all the occurrence data with coordinates defined as "not available" were eliminated, then all the data were filtered on the basis of observation, keeping only the parameters defined as "human observation" and "observation" thus excluding all museum occurrences, private collections, zoos or other types present that could have distorted our distribution model.
 The data was then filtered by area of interest (Europe excluding European Russia) including the period from 1981 to 2021, therefore for a period of 40 years.
@@ -132,7 +134,7 @@ The year 1981 was carefully chosen as the starting year for our study, since mos
 Subsequently, all occurrences with an uncertainty in the coordinates greater than 100 meters were excluded, to avoid a too pronounced bias in our model.
 Concerning databases with very numerous occurrences (in some cases over a million occurrences) this step has allowed us to remove many not very useful occurrences in our database, which has made the analysis work faster and more efficient.
 
-\subsection{Worldclim data}
+\subsubsection{Worldclim data}
 
 For this project, climate data was downloaded from WorldClim (available for free on the website https://www.worldclim.org/data/index.html).
 Worldclim offers an efficient set of past and present data. It has recently implemented its service by adding the possibility to download data regarding future forecasts \citep{wc}, \citep{ey}. This data is often used for ecological modeling \citep{bcw}. 
@@ -140,7 +142,7 @@ The 19 bioclimatic variables were downloaded at a spatial resolution of 2.5 minu
 The 19 variables include: mean annual temperature, mean diurnal interval, isotherm, temperature seasonality, maximum temperature of the hottest month, minimum temperature of the coldest month, annual temperature range, average temperature of the wettest quarter, average temperature of the wettest quarter. dry, mean temperature of the hottest district, mean temperature of the coldest district, annual rainfall, precipitation of the wettest month, precipitation of the driest month, rainfall seasonality, precipitation of the wettest district, precipitation of the driest district, precipitation of the district warmer, colder neighborhood rainfall 
 %DO I ENTER THE COLLINEARITY DATA HERE?
 
-\subsection{Species}
+\subsubsection{Species data}
 To identify the species for this project we used the database of the International Union for Conservation of Nature's Red List of Threatened Species (IUCN red list).
 The IUCN since 1964 has compiled these lists of all species more or less endangered and assesses their survival prospects. Today the IUCN red list represents the most complete inventory of the extinction risk of species globally \citep {IUCN}.
 
@@ -148,50 +150,123 @@ All the species investigated in this project have been carefully selected follow
 The first parameter used to select the species was the population trend. We have only chosen species with a decreasing population trend. It must be pointed out that the term "decreasing" is not always synonymous with danger (for example Querus Robur has a very high number of occurrences but the population is decreasing), but it must put us in a position to investigate the causes of this trend and the possible responses in order to preserve the species.
 The distribution and number of occurrences are then taken into consideration. The distribution had to be consistent with the choice of the area designated in the project; therefore, all the selected species were present on the European territory. Subsequently, only species with a number of occurrences greater than 35,000 were chosen. A high number of occurrences allowed us to create a better model with better random sampling capacity and thus to minimize the bias \citep {kaplan} .
 
-\subsubsection{\textit{Melanitta Fusca}} % ricordarsi melanitta in corsivo
-The first species treated was melanitta fusca (Linnaeus, 1758), it is a sea duck with a wide distribution both in central Europe, where it is present in several states, and in northern Europe where most of its occurrences are recorded.
+\bigskip
+{\noindent \textbf{\textit{Melanitta Fusca}}} 
+\\
+The first species treated was \textit{Melanitta fusca (Linnaeus, 1758)}, it is a sea duck with a wide distribution both in central Europe, where it is present in several states, and in northern Europe where most of its occurrences are recorded.
 A part of the occurrences is found in the territory of Asian Russia which, however, we have not considered in our project.
 From surveys in 1992-1993, when the estimate of the wintering population of north-western Europe was estimated at around 933,000 individuals, in the period 2007-2009 there was a decline close to 60\% in the Baltic Sea bringing the count to around 373,000 individuals \citep{skov}.
 Currently the number of natural individuals is estimated at around 141,000-268,000 specimens \citep{IUCN}.
-Melanitta fusca is currently classified as vulnerable in the IUCN red list \citep{IUCN}
+\textit{Melanitta fusca} is currently classified as vulnerable in the IUCN red list \citep{IUCN}
 Climate change poses potentially the greatest threat to the species today and in the future \citep{IUCN}. The decrease in the duration of the spring snow cover has been linked to the decline in populations in North America, probably due to trophic maladjustment \citep{drever}.
-
-Directly correlated with climate change, ocean acidification could lead to a decrease in shellfish that make up a large part of the Melanitta diet \citep{stein}, \citep{carb}.
+Directly correlated with climate change, ocean acidification could lead to a decrease in shellfish that make up a large part of the \textit{Melanitta} diet \citep{stein}, \citep{carb}.
 Another major threat is by-catches in fishing gear, which occur in particular in wintering areas \citep*{dagys}.
 In general, therefore, this species is threatened by various factors: climate change, non-native species and diseases, pollution, hunting.
-It is therefore a kind of interest and Obtaining trend estimates is a top priority \citep{IUCN}.
+It is therefore a kind of interest and Obtaining trend estimates is a top priority \citep{IUCN}.\\
+Data extraction: \citep{mela}
 
-\subsubsection{\textit{Miniopterus schreibersii}} %ricordarsi in corsivo
-Miniopterus schereibersii (Kuhl, 1817) is a bat of the Miniotteridae family.
+\bigskip
+{\noindent \textbf{\textit{Miniopterus schreibersii}}} 
+\\
+\textit{Miniopterus schereibersii (Kuhl, 1817)} is a bat of the \textit{Miniotteridae} family.
 It has a very large range that affects various states of central and eastern Europe.
-The global population of Miniopterus schreibersii is estimated to have decreased by at least 30\% across much of its range \citep{IUCN}. It is currently already extinct in Germany, Ukraine and Austria. In general, the habitat of this species is extremely fragmented. At present this species is classified as vulnerable \citep{IUCN}.
+The global population of \textit{Miniopterus schreibersii} is estimated to have decreased by at least 30\% across much of its range \citep{IUCN}. It is currently already extinct in Germany, Ukraine and Austria. In general, the habitat of this species is extremely fragmented. At present this species is classified as vulnerable \citep{IUCN}.
 The threats to this species are manifold: pollution from agricultural waste, human intrusion for recreational or work purposes, hunting and trapping, and invasive prion-induced disease.
 It is included in Annex II and IV of the EU Habitats and Species Directive and therefore requires special conservation measures, including the designation of special areas of conservation \citep{dir}.
-Currently there are numerous projects financed by LIFE for this species, in Spain, Italy and Romania \citep{IUCN}.
+Currently there are numerous projects financed by LIFE for this species, in Spain, Italy and Romania \citep{IUCN}.\\
+Data extraction: \citep{minio}
 
-\subsubsection{\textit{Lagopus muta}} %ricorda nome specie in corsivo
-Lagopus muta (Montin, 1781), also known as ptarmigan, is a bird of the Phasianidae family; it is a stationary species that populates the arctic and subarctic areas of Eurasia and especially North America. For our analysis we took into account only the occurrences located in the European section (excluding European Russia).
+\bigskip
+{\noindent \textbf{\textit{Lagopus muta}}} 
+\\
+\textit{Lagopus muta (Montin, 1781)}, also known as ptarmigan, is a bird of the Phasianidae family; it is a stationary species that populates the arctic and subarctic areas of Eurasia and especially North America. For our analysis we took into account only the occurrences located in the European section (excluding European Russia).
 Due to the size of its range it cannot be considered a vulnerable species, despite the population trend in constant decrease \citep{IUCN}.
 For this reason we find this species cataloged as least concern in the IUCN red list \citep{IUCN}.
 In Europe, population size is estimated to be decreasing at a rate approaching 30\% in 12.6 years (three generations) \citep{bird}.
 The threats affecting this species are on a global scale; habitat degradation and overhunting have had negative effects on population trends \citep{mad}. Much habitat loss occurs due to the development of tourist facilities and collision with cables around ski resorts can cause mortality \citep{IUCN}.
 Human presence results in a displacement of the species from their wintering habitat. Overgrazing by reindeer is thought to be causing a decline in Sweden \citep{sto}.
 Another fundamental problem is climate change.
-A decrease recorded in the Swiss Alps of around 30\% of the population over 10 years has been attributed to climate change \citep{de}.
+A decrease recorded in the Swiss Alps of around 30\% of the population over 10 years has been attributed to climate change \citep{de}.\\
+Data extraction: \citep{pernice}
 
-\subsubsection{\textit{Quercus robur}} %ricorda il corsivo
-Quercus robur (Linnaeus, 1753), commonly known as oak, is a tree belonging to the Fagaceae family.
+\bigskip
+{\noindent \textbf{\textit{Quercus robur}}} 
+\\
+\textit{Quercus robur (Linnaeus, 1753)}, commonly known as oak, is a tree belonging to the Fagaceae family.
 It has a very large range that covers a large part of central Europe.
 Due to its vast range it is not possible to consider it as an endangered species even if the population is constantly decreasing. \citep{khe}. It is therefore considered "least to concern" in the IUCN red list. \citep{IUCN}
 The population is potentially at risk of decline due to climate change, which could lead to increased disease risk, loss of suitable habitat and increased exposure to unsuitable weather conditions \citep{jon}, \citep{IUCN}.
 In general, throughout Europe, the population is declining and this is due to urban and agricultural expansion for timber \citep{du}.
 Furthermore, oak has historically been subjected to mortality events from external pathogens (such as Agrilus biguttatus \citep{eat}).
 In the future it is expected that the range of this species will likely change causing a shift towards north and east \citep{ef}.
-Global warming also increases susceptibility to pathogen infections; this could lead to increased environmental stress from drought or floods, extreme temperatures and increased mortality \citep{jon}.
+Global warming also increases the susceptibility to pathogen infections; this could lead to increased environmental stress from drought or floods, extreme temperatures and increased mortality \citep{jon}.\\
+Data extraction:\citep{querc}
 
 
-\subsection{SDM: species distribution model}
+\subsection{SDM: species distribution model} 
 \subsection{Colorist R package}
+The \texttt{colorist} package represents the beating heart of this project.
+Graphical map representation plays a key role in research to determine where, how and why wildlife distribution changes over space and time.\citep{colo}
+Understanding these mechanisms is one of the main objectives of ecology.\\\citep{and1}
+Traditionally, biologists used simple range maps to describe the distribution of species and individuals in space and time \citep{brt} \\\citep{gri}, however nowadays specific distribution data has become incredibly more abundant and readily available.
+Surely researchers can take advantage of a greater amount of high quality data, however this entails a series of challenges in visualizing this data that can often be confusing and unclear.\citep{colo}
+Community science projects have collected hundreds of millions of observations of wildlife populations \citep{nat} \citep{sal} and technologies for monitoring individual animals have improved and diversified \citep{ks}. Data for populations and individuals is now shared through a dedicated data infrastructure \citep{gbif} \citep{kra} and we have increasingly detailed descriptions of where and when wildlife can be found.
+This package emphasizes the use of color to indicate where, when and how consistently species can be found, to do this, \texttt{colorist} takes information from a stack of rasters, processes it and colors it in HCL (hue-chroma-luminance) in specific ways so that the occurrence, abundance, or density values have nearly equal perceptual weights in the resulting maps. \citep{colo}
+This package can be used to represent obtained data, as in our case, but it can also be used to explore a dataset in order to know the distribution of the species concerned.
+It is important to remember that the \texttt{colorist} functions have been developed to manage and visualize the data, but the interpretations are the responsibility of the researcher.\citep{colo}
+The workflow is as follows: creation of the metrics that describe the distribution of the species concerned, creation of the colorimetric palette for representation, creation of the map based on metrics and palettes and finally a legend to be associated with the map.
+In this project we used \texttt{colorist} to visualize the distribution of our species.
+After extracting, filtering and analyzing the data, the generalized linear model (GLM) was chosen for the study on the distribution of the species, which was subsequently imported into \texttt{colorist}.
+The metrics\_pull function was used to transform the model values into intensity values ranging from 0 (0 probability of occurrence) to 1 (maximum stack occurrence value).
+  In\texttt{colorist} we use the term "intensity" as a generic descriptor of normalized data values that can reflect the probability of relative occurrence, abundance, density or probability density.\citep{colo}
+We can describe this first phase as preparative, in fact this extraction process preserves all the information in the original stack while preparing the layers for the next visualization.
+
+\begin{lstlisting}
+
+library (colorist)
+metrics<-metrics_pull(fav4sp) 
+
+\end{lstlisting}
+
+\bigskip
+The \textit{'fav4sp'} file is a stack containing the information of all the species considered.
+Subsequently, having obtained the metrics, the function \textit{palette\_set} was used.
+
+\begin{lstlisting}
+
+palette<-palette_set(fav3sp)
+\end{lstlisting}
+
+\bigskip
+At this point, having obtained the metrics, having a palette that can be used, we moved on to creating the map.
+For the map we used the function \textit{map\_multiples}. 
+
+\begin{lstlisting}
+
+maps <- map_multiples (metrics, palette, ncol = 2,
+lambda_i = -5, labels = names (fav4sp))
+
+\end{lstlisting}
+\bigskip
+In this function it is interesting to underline the \textit{'lambda'} factor that allows us to change the intensity of the display for a more correct interpretation of the data.\\
+The map gave us an idea of the distribution of each species, however the \textit{metrics\_distill} function was used to view all the species on the same map to see if and how they shared common space.
+\begin{lstlisting}
+
+metricsdist<- metrics_distill(fav4sp)
+
+\end{lstlisting}
+\bigskip
+In the end, the legend was created with the \textit{legend\_set} function; for this it is necessary to use only the palette.
+\\
+\begin{lstlisting}
+legend <- legend_set(palette, group_labels = names(fav4sp))
+
+\end{lstlisting}
+\bigskip
+At this point we can interpret the data through the intensity and specificity parameters.
+
+
+
 \subsection{Climate change}
 \subsection{Model performance}
 
@@ -278,6 +353,49 @@ Eyring, V., Bony, S., Meehl, G. A., Senior, C. A., Stevens, B., Stouffer, R. J.,
 
 \bibitem[WorldClim. 2021]{bcw}
 WorldClim bioclimatic Variables. Available at: https://www.worldclim.org/data/bioclim.html. (Accessed: october 2021)
+%%%%%%%%%%%%%%%%%%%%%%%
+\bibitem[Andrewartha \& Birch. 1954]{and1}
+Andrewartha, H. G., \& Birch, L. C. (1954). The distribution and abundance of animals. Chicago, IL: University of Chicago Press.
+
+\bibitem[Burt. 1943]{brt}
+Burt, W. H. (1943). Territoriality and home range concepts as applied to mammals. Journal of Mammalogy, 24(3), 346– 352. https://doi-org.ezproxy.unibo.it/10.2307/1374834
+
+\bibitem[Grinnel. 1904]{gri}
+Grinnell, J. (1904). The origin and distribution of the chest-nut-backed chickadee. The Auk, 21(3), 364– 382. https://doi-org.ezproxy.unibo.it/10.2307/4070199
+
+\bibitem[Kays et al. 2015]{ks}
+Kays, R., Crofoot, M. C., Jetz, W., \& Wikelski, M. (2015). Terrestrial animal tracking as an eye on life and planet. Science, 348(6240), aaa2478. https://doi-org.ezproxy.unibo.it/10.1126/science.aaa2478
+
+\bibitem[INaturalist. 2020]{nat}
+iNaturalist. (2020). iNaturalist. Retrieved from https://www.inaturalist.org
+
+\bibitem[Sullivan et al. 2014]{sal}
+Sullivan, B. L., Aycrigg, J. L., Barry, J. H., Bonney, R. E., Bruns, N., Cooper, C. B., … Kelling, S. (2014). The eBird enterprise: An integrated approach to development and application of citizen science. Biological Conservation, 169, 31– 40. https://doi-org.ezproxy.unibo.it/10.1016/j.biocon.2013.11.003
+
+\bibitem[GBIF. 2020]{gbif}
+GBIF. (2020). Global biodiversity information facility. Retrieved from http://gbif.org
+
+\bibitem[Kranstauber et al. 2011]{kra}
+Kranstauber, B., Cameron, A., Weinzerl, R., Fountain, T., Tilak, S., Wikelski, M., \& Kays, R. (2011). The Movebank data model for animal tracking. Environmental Modelling & Software, 26(6), 834– 835.
+
+\bibitem[Schuetz \& Strimas-Mackey \& Auer. 2020]{colo}
+Schuetz, JG, Strimas-Mackey, M, Auer, T. colorist: An r package for colouring wildlife distributions in space–time. Methods Ecol Evol. 2020; 11: 1476– 1482. https://doi-org.ezproxy.unibo.it/10.1111/2041-210X.13477
+
+\bibitem[Lagopus muta. GBIF. 2021]{pernice}
+GBIF.org (26 October 2021) GBIF Occurrence Download  https://doi.org/10.15468/dl.334ay7
+
+\bibitem[Miniopterus schreibersii. GBIF. 2021]{minio}
+GBIF.org (29 November 2021) GBIF Occurrence Download  https://doi.org/10.15468/dl.b4jh6s
+
+\bibitem[Quercus robur L.. GBIF. 2021]{querc}
+GBIF.org (10 December 2021) GBIF Occurrence Download  https://doi.org/10.15468/dl.t3xsw7
+
+\bibitem[Melanitta fusca. GBIF. 2021]{mela}
+GBIF.org (08 December 2021) GBIF Occurrence Download  https://doi.org/10.15468/dl.xzb96a
+
+
+
+
 
 
 
